Removed parameter in getHash() of blocks